apps/production/construct/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: construct
    app.kubernetes.io/name: matrix
  name: matrix-construct
  namespace: matrix
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: construct
      app.kubernetes.io/name: matrix
  serviceName: matrix-construct
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: construct
        app.kubernetes.io/name: matrix
    spec:
      affinity: {}
      containers:
      - env:
        - name: ircd_listen_matrix_host
          value: 0.0.0.0
        - name: ircd_listen_matrix_port
          value: "6167"

        tty: true
        stdin: true

        command: 
        - sh
        - -c
        - |
          /bin/construct const.sulian.eu

        image: ghcr.io/morguldir/construct:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 15
          httpGet:
            path: /_matrix/federation/v1/version
            port: http
            scheme: HTTP
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 15
        name: construct
        ports:
        - containerPort: 6167
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /_matrix/federation/v1/version
            port: http
            scheme: HTTP
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 7
        resources:
          limits:
            cpu: "3"
            memory: 4000Mi
          requests:
            cpu: 500m
            memory: 1000Mi
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
        startupProbe:
          failureThreshold: 24
          httpGet:
            path: /_matrix/federation/v1/version
            port: http
            scheme: HTTP
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 10
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/var/db/construct/
          name: data
          subPath: data
        - mountPath: /build
          name: build
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: matrix-construct-data
      - name: build
        persistentVolumeClaim:
          claimName: matrix-construct-build
