apps/production/construct/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-05-24T23:39:51Z"
  labels:
    app.kubernetes.io/instance: construct
    app.kubernetes.io/name: matrix
  name: matrix-construct
  namespace: matrix
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 6167
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: construct
    app.kubernetes.io/name: matrix
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
